// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvoconMultiChipInput > renders correctly when input is not valid 1`] = `
<div
  class="full-width"
  data-v-fd6d3257=""
>
  <div
    class="text-input text-input--error"
    data-v-fd6d3257=""
  >
    <div
      class="text-container d-flex"
      data-v-fd6d3257=""
    >
      
      <evocon-input-chip-stub
        appendinnericon="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
        class="ma-1"
        data-v-fd6d3257=""
        disabled="false"
        error="true"
        grow="true"
        isdynamicchip="false"
        isplaininputchip="false"
        modelvalue="ab"
        warning="false"
      />
      
      <!--v-if-->
    </div>
  </div>
  <div
    class="d-flex flex-row justify-space-between"
    data-v-fd6d3257=""
  >
    <span
      class="hint-text hint-text--error"
      data-v-fd6d3257=""
    />
    <span
      class="hint-text hint-text--error"
      data-v-fd6d3257=""
    >
      
      
    </span>
  </div>
</div>
`;

exports[`EvoconMultiChipInput > renders correctly when modelValue is empty 1`] = `
<div
  class="full-width"
  data-v-fd6d3257=""
>
  <div
    class="text-input"
    data-v-fd6d3257=""
  >
    <div
      class="text-container d-flex"
      data-v-fd6d3257=""
    >
      
      
      <!--v-if-->
    </div>
  </div>
  <div
    class="d-flex flex-row justify-space-between"
    data-v-fd6d3257=""
  >
    <span
      class="hint-text"
      data-v-fd6d3257=""
    />
    <span
      class="hint-text"
      data-v-fd6d3257=""
    >
      
      
    </span>
  </div>
</div>
`;

exports[`EvoconMultiChipInput > renders correctly when modelValue is empty and placeholder is set 1`] = `
<div
  class="full-width"
  data-v-fd6d3257=""
>
  <div
    class="text-input"
    data-v-fd6d3257=""
  >
    <div
      class="text-placeholder"
      data-v-fd6d3257=""
    >
      placeholder
    </div>
  </div>
  <div
    class="d-flex flex-row justify-space-between"
    data-v-fd6d3257=""
  >
    <span
      class="hint-text"
      data-v-fd6d3257=""
    />
    <span
      class="hint-text"
      data-v-fd6d3257=""
    >
      
      
    </span>
  </div>
</div>
`;

exports[`EvoconMultiChipInput > renders correctly when one chip is invalid 1`] = `
<div
  class="full-width"
  data-v-fd6d3257=""
>
  <div
    class="text-input text-input--error"
    data-v-fd6d3257=""
  >
    <div
      class="text-container d-flex"
      data-v-fd6d3257=""
    >
      
      <evocon-input-chip-stub
        appendinnericon="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
        class="ma-1"
        data-v-fd6d3257=""
        disabled="false"
        error="false"
        grow="true"
        isdynamicchip="false"
        isplaininputchip="false"
        modelvalue="valid1"
        warning="false"
      />
      <evocon-input-chip-stub
        appendinnericon="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
        class="ma-1"
        data-v-fd6d3257=""
        disabled="false"
        error="true"
        grow="true"
        isdynamicchip="false"
        isplaininputchip="false"
        modelvalue="ab"
        warning="false"
      />
      
      <!--v-if-->
    </div>
  </div>
  <div
    class="d-flex flex-row justify-space-between"
    data-v-fd6d3257=""
  >
    <span
      class="hint-text hint-text--error"
      data-v-fd6d3257=""
    />
    <span
      class="hint-text hint-text--error"
      data-v-fd6d3257=""
    >
      
      
    </span>
  </div>
</div>
`;

exports[`EvoconMultiChipInput > renders correctly when two valid chips exist 1`] = `
<div
  class="full-width"
  data-v-fd6d3257=""
>
  <div
    class="text-input"
    data-v-fd6d3257=""
  >
    <div
      class="text-container d-flex"
      data-v-fd6d3257=""
    >
      
      <evocon-input-chip-stub
        appendinnericon="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
        class="ma-1"
        data-v-fd6d3257=""
        disabled="false"
        error="false"
        grow="true"
        isdynamicchip="false"
        isplaininputchip="false"
        modelvalue="valid1"
        warning="false"
      />
      <evocon-input-chip-stub
        appendinnericon="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
        class="ma-1"
        data-v-fd6d3257=""
        disabled="false"
        error="false"
        grow="true"
        isdynamicchip="false"
        isplaininputchip="false"
        modelvalue="valid2"
        warning="false"
      />
      
      <!--v-if-->
    </div>
  </div>
  <div
    class="d-flex flex-row justify-space-between"
    data-v-fd6d3257=""
  >
    <span
      class="hint-text"
      data-v-fd6d3257=""
    />
    <span
      class="hint-text"
      data-v-fd6d3257=""
    >
      
      
    </span>
  </div>
</div>
`;
